// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQLLiveData Integration publishes a patch on 'patch' 1`] = `
Object {
  "houses": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "replace",
        "path": "/1/address",
        "value": "42 Patch Event St.",
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration publishes a patch on 'patch' 2`] = `
Object {
  "houses": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "replace",
        "path": "/0/address",
        "value": "123 real st apt. 1",
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration publishes patches on 'update' 1`] = `
Object {
  "houses": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "replace",
        "path": "/0/numberOfCats",
        "value": 200,
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration publishes patches on 'update' 2`] = `
Object {
  "houses": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "replace",
        "path": "/1/address",
        "value": "200 legit rd apt. 2",
      },
      Object {
        "from": null,
        "op": "replace",
        "path": "/0/address",
        "value": "123 real st apt. 1",
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration publishes the initialQuery immediately 1`] = `
Object {
  "houses": Object {
    "patch": null,
    "query": Array [
      Object {
        "address": "123 real st",
        "id": "real_street",
        "numberOfCats": 5,
      },
      Object {
        "address": "200 legit rd",
        "id": "legit_road",
        "numberOfCats": 0,
      },
    ],
  },
}
`;

exports[`GraphQLLiveData Integration when trackState is false publishes a patch on 'patch' 1`] = `
Object {
  "houses": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "replace",
        "path": "/1/address",
        "value": "42 Patch Event St.",
      },
    ],
    "query": null,
  },
}
`;
